--- a/backend/src/main/resources/templates/error.html
+++ b/backend/src/main/resources/templates/error.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg" id="nav-scrolled" aria-label="Eleventh navbar example">
+  <nav class="navbar navbar-expand-lg fixed-top" id="nav-scrolled" aria-label="Eleventh navbar example">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="#">
                 <img src="/img/logo.png" alt="Logo" width="45" height="40" class="d-inline-block" />
