--- a/backend/src/main/resources/templates/dashboard.html
+++ b/backend/src/main/resources/templates/dashboard.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg custom-navbar" id="nav-scrolled" aria-label="Eleventh navbar example">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center" href="#">
+            <a class="navbar-brand d-flex align-items-center" href="/inicio">
                 <img src="/img/logo.png" alt="Logo" width="45" height="40" class="d-inline-block" />
                 <span>Fashion.Net</span>
             </a>
@@ -38,11 +38,9 @@
                             </path>
                         </svg></a>
           </li>
-            <li class="nav-item me-3">
-            <a class="nav-link active" aria-current="page" href="#">GESTION DE REPORTES</a>
-          </li>
+            
           <li class="nav-item me-3">
-            <a class="nav-link active" aria-current="page" href="#">Reporte</a>
+            <a class="nav-link active" aria-current="page" href="#">Reportes</a>
           </li>
           <li class="nav-item me-3">
             <a class="nav-link" href="#usuarios">Usuarios</a>
@@ -68,7 +66,7 @@
                     <ul class="dropdown-menu dropdown-menu-end text-small">
                         <li th:if="${session.usuariosession != null}"
                         sec:authorize="hasRole('DISENIADOR')"><a class="dropdown-item" href="/perfil">Mi perfil</a></li>
-                        <li><a class="dropdown-item" href="/editar_perfil">Editar perfil</a></li>
+                        <li><a class="dropdown-item" th:href="@{/editar_perfil/__${session.usuariosession.id}__}">Editar perfil</a></li>
                         <li>
                             <hr class="dropdown-divider" />
                         </li>
