--- a/backend/src/main/resources/templates/home.html
+++ b/backend/src/main/resources/templates/home.html
@@ -97,75 +97,77 @@
                     <p>Prepárate para deslumbrarte con las publicaciones más impactantes</p>
                 </div>
 
-            <div id="carouselExample" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel" >
-                <div class="carousel-inner">
-
-                    <div th:each="chunk, iterStat : ${publicacionesChunked}"
-                        th:classappend="${iterStat.index} == 0 ? 'carousel-item active' : 'carousel-item'">
-                        <div class="cards-wrapper ">
-
-                            <div th:each="publicacion : ${chunk}" class="card h-100">
-                                 <div class="card-body ">
-                                     <div class="card-header">
-                                     <img th:src="@{/imagen/perfil/__${publicacion.usuario.id}__}" alt="foto-perfil"
-                                        width="35" height="35" class="d-inline-block rounded-circle" id="img-cover" onerror="this.src='/img/fotoDefault.jpg'">
-                                    <a th:href="@{/perfil/__${publicacion.usuario.id}__}"><span th:text="${publicacion.usuario.nombreUsuario}"></span></a>
-                                     </div>
-                                <img th:src="@{/imagen/publicacion/__${publicacion.id}__}" class="card-img-top" alt="">
-                                <div class="card-footer d-flex align-items-center">
-                            <div class="btns-right d-flex">
-                                <form th:action="@{/darLike/__${publicacion.id}__}" method="post" class="d-flex align-items-center">
-                                    <button th:disabled="${(session.usuariosession != null) && (session.usuariosession.rol == T(com.egg.backend.enumeraciones.Rol).ADMIN)} ? 'true': 'false'"  type="submit" class="btn like-btn heart-btn" th:classappend="${usuarioDioLikeMap.get(publicacion.id)} ? 'liked' : ''">                                        
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                            fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
-                                            <path fill-rule="evenodd"
-                                                d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
+                <div id="carouselExample" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel" >
+                    <div class="carousel-inner">
+    
+                        <div th:each="chunk, iterStat : ${publicacionesChunked}"
+                            th:classappend="${iterStat.index} == 0 ? 'carousel-item active' : 'carousel-item'">
+                            <div class="cards-wrapper ">
+    
+                                <div th:each="publicacion : ${chunk}" class="card h-100">
+                                     <div class="card-body ">
+                                         <div class="card-header">
+                                         <img th:src="@{/imagen/perfil/__${publicacion.usuario.id}__}" alt="foto-perfil"
+                                            width="35" height="35" class="d-inline-block rounded-circle" id="img-cover" onerror="this.src='/img/fotoDefault.jpg'">
+                                        <a th:href="@{/perfil/__${publicacion.usuario.id}__}"><span th:text="${publicacion.usuario.nombreUsuario}"></span></a>
+                                         </div>
+                                    <img th:src="@{/imagen/publicacion/__${publicacion.id}__}" class="card-img-top" alt="">
+                                    <div class="card-footer d-flex align-items-center">
+                                <div class="btns-right d-flex">
+                                    <form th:action="@{/darLike/__${publicacion.id}__}" method="post" class="d-flex align-items-center">
+                                        <button th:disabled="${(session.usuariosession != null) && (session.usuariosession.rol == T(com.egg.backend.enumeraciones.Rol).ADMIN)} ? 'true': 'false'"  type="submit" class="btn like-btn heart-btn" th:classappend="${usuarioDioLikeMap.get(publicacion.id)} ? 'liked' : ''">                                        
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                                <path fill-rule="evenodd"
+                                                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
+                                            </svg>
+                                           
+                                        </button>         
+                                         <span  th:text="${conteoLike[publicacion.id]}"></span> 
+                                    </form>
+                                                                   
+                                    <button type="button" class="btn like-btn">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                            class="bi bi-chat" viewBox="0 0 16 16">
+                                            <path
+                                                d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
                                         </svg>
-                                       
-                                    </button>         
-                                     <span  th:text="${conteoLike[publicacion.id]}"></span> 
-                                </form>
-                                                               
-                                <button type="button" class="btn like-btn">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                        class="bi bi-chat" viewBox="0 0 16 16">
-                                        <path
-                                            d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
-                                    </svg>
-                                    <span th:text="${conteoComentariosPub[publicacion.id]}"></span> 
-                                </button>                                
-                            </div>
-                                    <div class="dropup btns-left ms-sm-auto">
-                                <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                        class="bi bi-grip-horizontal" viewBox="0 0 16 16">
-                                        <path
-                                            d="M2 8a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm3 3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm3 3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm3 3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm3 3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-                                    </svg>
-                                </button>
-                                <ul class="dropdown-menu dropdown-menu-end">
-
-                                    <li  ><a class="dropdown-item report-link" href="#" data-toggle="modal" data-target="#reportModal" th:data-id="${publicacion.id}" th:if="${publicacion.usuario.id != session.usuariosession.id}"sec:authorize="hasAnyRole('DISENIADOR', 'USER')">Reportar</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/disenador/ver/__${publicacion.id}__}">Ver publicación</a></li>
-                                    <li><a class="dropdown-item" href="#">Cerrar</a></li>
-                                </ul>
-                            </div>
+                                        <span th:text="${conteoComentariosPub[publicacion.id]}"></span> 
+                                    </button>                                
+                                </div>
+                                        <div class="dropup btns-left ms-sm-auto">
+                                    <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                            class="bi bi-grip-horizontal" viewBox="0 0 16 16">
+                                            <path
+                                                d="M2 8a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm3 3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm3 3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm3 3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm3 3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                                        </svg>
+                                    </button>
+                                    <ul class="dropdown-menu dropdown-menu-end">
+    
+                                        <li  ><a class="dropdown-item report-link" href="#" data-toggle="modal" data-target="#reportModal" th:data-id="${publicacion.id}" th:if="${publicacion.usuario.id != session.usuariosession.id}"sec:authorize="hasAnyRole('DISENIADOR', 'USER')">Reportar</a></li>
+                                        <li><a class="dropdown-item" th:href="@{/disenador/ver/__${publicacion.id}__}">Ver publicación</a></li>
+                                        <li><a class="dropdown-item" href="#">Cerrar</a></li>
+                                    </ul>
+                                </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-
+                </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                            data-bs-slide="prev">
+                        data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                            data-bs-slide="next">
+                        data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
-                </div>
+                        
+                
             </div>
         </main>
 
@@ -212,7 +214,7 @@
                     <form action="/inicio" method="GET">
                         <div>
                             <div class="dropdown">
-                                <button class="btn btn-secondary btn-login dropdown-toggle" style="margin-top:0;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button class="btn btn-login dropdown-toggle" style="margin-top:0;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     <svg xmlns="http://www.w3.org/2000/svg" style="margin-right: 10px" width="16" height="16" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
                                     <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
                                     <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
@@ -251,7 +253,7 @@
             </div>
 
 
-            <div class="container">
+            <div class="container cards-home-container">
                 <div class="row row-cols-1 row-cols-md-4 g-4">
                     <div th:each="publicacion : ${publicacionesFiltradas}" class="col">
                         <div class="card h-100">
@@ -264,7 +266,7 @@
                             <div class="card-footer d-flex align-items-center">
                                 <div class="btns-right d-flex">
                                     <form th:action="@{/darLike/__${publicacion.id}__}" method="post" class="d-flex align-items-center">
-                                        <button th:if="${session.usuariosession != null}" sec:authorize="hasAnyRole('DISENIADOR', 'USER')" type="submit" class="btn like-btn heart-btn" th:classappend="${usuarioDioLikeMap.get(publicacion.id)} ? 'liked' : ''">                                        
+                                        <button th:disabled="${(session.usuariosession != null) && (session.usuariosession.rol == T(com.egg.backend.enumeraciones.Rol).ADMIN)} ? 'true': 'false'" type="submit" class="btn like-btn heart-btn" th:classappend="${usuarioDioLikeMap.get(publicacion.id)} ? 'liked' : ''">                                        
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                  fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
                                             <path fill-rule="evenodd"
@@ -296,9 +298,9 @@
                                     </button>
                                     <ul class="dropdown-menu dropdown-menu-end">
 
-                                        <li><a class="dropdown-item report-link" href="#" data-toggle="modal" data-target="#reportModal" th:data-id="${publicacion.id}">Reportar</a></li>
+                                        <li th:if="${publicacion.usuario.id != session.usuariosession.id}" sec:authorize="hasAnyRole('DISENIADOR', 'USER')" ><a class="dropdown-item report-link" href="#" data-toggle="modal" data-target="#reportModal" th:data-id="${publicacion.id}">Reportar</a></li>
                                         <li><a class="dropdown-item" th:href="@{/disenador/ver/__${publicacion.id}__}">Ver publicación</a></li>
-                                        <li><a class="dropdown-item" href="#">Cerrar</a></li>
+                                        
                                     </ul>
                                 </div>
 
