--- a/backend/src/main/resources/templates/perfil.html
+++ b/backend/src/main/resources/templates/perfil.html
@@ -28,7 +28,7 @@
 <body>
 
     <div class="perfil-section d-flex vh-100">
-        <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px;position: fixed; height: 100%; overflow-y: auto;">
+        <div class="d-flex flex-column flex-shrink-0 p-3 navbar-izq" style="width: 280px;position: fixed; height: 100%; overflow-y: auto;">
             <a href="/inicio"
                 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                 <img src="/img/logo.png" alt="logo" class="bi pe-none me-2" width="40" height="35">
@@ -62,17 +62,6 @@
                                 stroke-width="2" x1="12.003" x2="12.003" y1="6.545" y2="17.455"></line>
                         </svg>
                         Publicar
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link link-body-emphasis">
-                        <svg aria-label="Buscar personas" class="bi pe-none me-2 _8-yf5 " fill="#262626" height="22"
-                            viewBox="0 0 48 48" width="22">
-                            <path clip-rule="evenodd"
-                                d="M24 0C10.8 0 0 10.8 0 24s10.8 24 24 24 24-10.8 24-24S37.2 0 24 0zm0 45C12.4 45 3 35.6 3 24S12.4 3 24 3s21 9.4 21 21-9.4 21-21 21zm10.2-33.2l-14.8 7c-.3.1-.6.4-.7.7l-7 14.8c-.3.6-.2 1.3.3 1.7.3.3.7.4 1.1.4.2 0 .4 0 .6-.1l14.8-7c.3-.1.6-.4.7-.7l7-14.8c.3-.6.2-1.3-.3-1.7-.4-.5-1.1-.6-1.7-.3zm-7.4 15l-5.5-5.5 10.5-5-5 10.5z"
-                                fill-rule="evenodd"></path>
-                        </svg>
-                        Explorar
                     </a>
                 </li>
                 <li class="" th:if="${session.usuariosession != null}"
@@ -139,7 +128,7 @@
                 </div>
             </div>
 
-            <section class="cards-container mt-5 py-3">        
+            <section class="cards-container perfil-cards mt-5 py-3 pt-4 mx-4">        
                 <div class="container">
         
                     <div class="row row-cols-1 row-cols-md-4 g-4">
@@ -182,11 +171,11 @@
                                         </button>
                                         <ul class="dropdown-menu dropdown-menu-end">
 
-                                            <li th:if="${usuario.id != session.usuariosession.id}" sec:authorize="hasAnyRole('DISENIADOR', 'USER')" ><a class="dropdown-item report-link" href="#" data-toggle="modal" data-target="#reportModal" th:data-id="${publicacion.id}" data-tipo="publicacion">Reportar</a></li>
+                                            <li th:if="${usuario.id != session.usuariosession.id}" ><a class="dropdown-item report-link" href="#" data-toggle="modal" data-target="#reportModal" th:data-id="${publicacion.id}" data-tipo="publicacion">Reportar</a></li>
 
                                             <li><a class="dropdown-item" th:href="@{/disenador/ver/__${publicacion.id}__}">Ver publicación</a></li>
                                             <li th:if="${usuario.id == session.usuariosession.id}" sec:authorize="hasRole('DISENIADOR')"><a role="button" type="submit" class="dropdown-item" th:href= "@{/disenador/eliminar/__${publicacion.id}__}"> Eliminar</a></li>
-                                            <li><a class="dropdown-item" href="#">Cerrar</a></li>
+                                            
                                         </ul>
                                     </div>
         
@@ -200,29 +189,6 @@
             
         </header>
     </div>
-
-
-
-    <!-- <div class="row row-cols-1 row-cols-md-5 g-4">
-        <div th:each="publicacion : ${publicaciones}" class="col-sm-6">
-            <div class="card h-100">
-                <div class="card-body">
-                    
-                    <img th:src="@{/imagen/publicacion/__${publicacion.id}__}" alt="img">
-                   
-                    <p th:text="${publicacion.contenido}"></p>
-                    <p th:text="${publicacion.imagen.id}"></p>
-                     
-                </div>
-                <div class="card-footer">
-                    
-                    <a role="button" type="submit" class="btn btn-danger" th:href= "@{/disenador/eliminar/__${publicacion.id}__}"> Eliminar</a>
-                </div>
-                
-            </div>
-        </div>
-
-    </div> -->
     
         <div class="modal fade" id="reportModal" tabindex="-1" role="dialog" aria-labelledby="reportModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
