--- a/backend/src/main/resources/templates/dashboard.html
+++ b/backend/src/main/resources/templates/dashboard.html
@@ -178,7 +178,7 @@
                                 <a><img class="avatar" th:if="${usuario.imagen != null}" th:src="@{/imagen/perfil/__${usuario.id}__}" style="width: 50px ;
                                         height: 50px;
                                         border-radius: 30%;
-                                        overflow: hidden;" alt="avatar"></a>
+                                        overflow: hidden;" alt="avatar" onerror="this.src='/img/fotoDefault.jpg'"></a>
 
                             <td th:text="${usuario.rol}"></td>
                             <td th:text="${usuario.fechaAlta}"></td>
