--- a/backend/src/main/resources/templates/form_crearPost.html
+++ b/backend/src/main/resources/templates/form_crearPost.html
@@ -96,7 +96,7 @@
             
             <div class="mb-3">
                 <label for="contenido" class="form-label">Contenido</label>
-                <textarea type="text" name="contenido" class="form-control" id="clave" required></textarea>
+                <textarea type="text" name="contenido" class="form-control" id="clave"></textarea>
             </div>
             <div class="col-md-12 mb-2">
                 <label for="imagen" class="form-label">Adjunta la imagen(*)</label>
