--- a/backend/src/main/resources/templates/perfil.html
+++ b/backend/src/main/resources/templates/perfil.html
@@ -35,8 +35,8 @@
                 <span class="fs-4">FashionNet</span>
             </a>
             <hr>
-            <ul class="nav nav-pills flex-column mb-auto">
-                <li class="nav-item">
+            <ul class="nav nav-pills flex-column mb-auto btns">
+                <li class="my-1">
                     <a href="/inicio" class="nav-link" aria-current="page">
                         <svg aria-label="Inicio" class="bi pe-none me-2 _8-yf5 " fill="#262626" height="22"
                             viewBox="0 0 48 48" width="22">
@@ -47,7 +47,7 @@
                         Home
                     </a>
                 </li>
-                <li th:if="${session.usuariosession != null}"
+                <li class="my-1" th:if="${session.usuariosession != null}"
                         sec:authorize="hasRole('DISENIADOR')">
                     <a href="/disenador/crear" class="nav-link link-body-emphasis">
                         <svg aria-label="Nueva publicación" class="bi pe-none me-2 _ab6-" color="rgb(0, 0, 0)"
@@ -64,7 +64,7 @@
                         Publicar
                     </a>
                 </li>
-                <li class="" th:if="${session.usuariosession != null}"
+                <li class="my-1" th:if="${session.usuariosession != null}"
                         sec:authorize="hasRole('DISENIADOR')">
                     <a th:href="@{/perfil/__${session.usuariosession.id}__}"
                         class="d-flex align-items-center nav-link link-body-emphasis text-decoration-none">
@@ -128,7 +128,7 @@
                 </div>
             </div>
 
-            <section class="cards-container perfil-cards mt-5 py-3 pt-4 mx-4">        
+            <section class="cards-container perfil-cards mt-3 py-3 pt-4 mx-4">        
                 <div class="container">
         
                     <div class="row row-cols-1 row-cols-md-4 g-4">
